# SpeC2Rust

./: .gitignore  README.md  config.example.json  local_config.json.bak  local_config2.json.bak  report.md  requirements.txt  spec_agent.md  tips.md
datasets/cflow-new/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
datasets/cflow-new/autom4te.cache/: traces.0t
datasets/cflow-new/doc/: Makefile  Makefile.am  Makefile.in  cflow.1  cflow.info  cflow.texi  fdl.texi  stamp-vti
datasets/cflow-new/doc/imprimatur/: Makefile  (+1 more)
datasets/cflow-new/elisp/: Makefile  Makefile.am  Makefile.in  cflow-mode.el
datasets/cflow-new/gnu/: Makefile  Makefile.am  Makefile.in  _Noreturn.h  alignof.h  alloca.h  alloca.in.h  arg-nonnull.h  asnprintf.c  assert.h  assert.in.h  attribute.h  basename-lgpl.c  basename-lgpl.h  bitrotate.c  bitrotate.h  c++defs.h  calloc.c  cloexec.c  cloexec.h  close.c  dup2.c  errno.in.h  error.c  error.h  error.in.h  exitfail.c  exitfail.h  fcntl.c  fcntl.h  fcntl.in.h  fd-hook.c  fd-hook.h  filename.h  float+.h  float.c  float.in.h  free.c  fstat.c  getdtablesize.c  (+80 more)
datasets/cflow-new/m4/: gnulib-comp.m4
datasets/cflow-new/po/: LINGUAS  Makefile  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  cflow.pot  da.gmo  da.po  de.gmo  de.po  eo.gmo  eo.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  hr.gmo  hr.po  id.gmo  id.po  nl.gmo  nl.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  ro.gmo  ro.po  sr.gmo  sr.po  sv.gmo  sv.po  uk.gmo  uk.po  (+4 more)
datasets/cflow-new/src/: Makefile  Makefile.am  Makefile.in  c.c  c.l  cflow  cflow.h  depmap.c  dot.c  gnu.c  linked-list.c  main.c  output.c  parser.c  parser.h  posix.c  symbol.c
datasets/cflow-new/test/: cflow-basic.sh  cflow-flags.sh  cflow-formats.sh  multi.c  recursion.c  simple.c
src/: README.md  pyproject.toml
src/agent/: USAGE.md  __init__.py  agent.py  c_doc_agent.py  code_fixer_agent.py  error_organizer_agent.py  growth_rust_agent.py  macro_agent.py  main.py  pointer_agent.py  prompt.py  prompt_bak.py  run_rust_agent.sh  rust_agent.py  rust_agent.py.bak  rust_repair_agent.py  spec_agent.py  spec_json_agent.py  split.py  stable_rust_agent.py  unfinished_code_agent.py
src/agent/alternatives/: __init__.py  contextual_rust_agent.py  contextual_spec_agent.py  rust_generation_spec_agent.py  stable_rust_agent.py
src/agent/rtest/: __init__.py  _smoke_test.py  c_project_builder.py  c_string_arrays.py  constants.py  debug_backends.py  log_agent.py  material_policy.py  models.py  repair_adapter.py  repair_prompt.py  response_contract.py  runtime_probe.py  rust_test_agent.py  seeding.py  signals.py  snapshot.py  source_loader.py  suite_repair_coordinator.py  test_runner.py  test_translator.py
src/agent/rust_structural_repair/: __init__.py  _e2e_test.py  _smoke_test.py  bracket_scanner.py  orchestrator.py  repair_rules.py  tokenizer.py  validator.py
src/config/: config.py  prompt.py
src/llm/: __init__.py  custom_api.py  exceptions.py  model.py
src/llm/openai/: README.md  __init__.py  oai.py
src/llm/qianwen/: README.md  qianwen_gen.py
src/parse/: README.md  c_ast.py
src/parse/res/: SipHash.json  ag.json  avl-tree-debug3.json  avl-tree.dot  avl-tree.json  avl.json  c4.json  cat.dot  cat.json  cflow-1.8.json  head.json  kcat.json  lwext4.json  md5-c.dot  md5-c.json  pwd.json  quadtree.json  sds.json  shc.json  taskflow.json  which.json  yank.json
src/parse/test_c_project/: main.c  math.c  math.h  utils.c  utils.h
src/tests/: test_c_project_builder.py  test_contextual_rust_agent.py  test_custom_api_usage.py  test_debug_backends.py  test_error_organizer_agent.py  test_log_agent.py  test_main_c_docs_flags.py  test_model_round_logging.py  test_module_splitter_llm.py  test_module_splitter_real_llm.py  test_prompt_templates.py  test_round_logger.py  test_rust_repair_agent.py  test_rust_test_agent_logging.py  test_spec_agent.py  test_translation_contract.py
src/tests/_tmp_rust_repair_agent_0f8334ed51524b189443219afd929ba2/: sample.rs
src/tests/_tmp_rust_repair_agent_771c38c035a245c2bb20d9d69ee9b785/: sample.rs
src/tests/_tmp_rust_repair_agent_bf86c0aac8a044bb81c75e21bcdd48f0/: repair_journal.jsonl
src/tests/_tmp_rust_repair_agent_da10cb07fcfb4a429721022d79c9e017/: sample.rs
src/tests/_tmp_rust_repair_agent_dfea0fc6a0b7426dba634e9545a98b50/: sample.rs
src/utils/: README.md  cmd.py  code_analyzer.py  document_generator.py  fmtpr.py  rag.py  round_logger.py  runtest.py  spec.py  translation_metrics.py
(+557 files in other folders)
